--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tres en Raya - Reactivo y Limpio</title>
+    <title>Tres en Raya</title>
+
     <!-- Incluir Tailwind CSS (CDN) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -39,6 +40,8 @@
             plugins: [],
         }
     </script>
+    <link rel="shortcut icon" href="logo.png" type="image/png">
+
     <!-- Incluir Font Awesome para iconos (CDN) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         crossorigin="anonymous" referrerpolicy="no-referrer" />
